[package]
name = "harvester"
description = "Obtains recent SVDs from Microchip ATPACKs repository."
version = "0.9.8"
license = "MIT OR Apache-2.0"
authors = ["Michal Fita <4925040+michalfita@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
bytes = { version = "1.2" }
clap = { version = "4.0", features = ["derive"] }
clap-verbosity-flag = { version = "2.0" }
lazy-regex = { version = "2.3" }
reqwest = { version = "0.11", features = ["cookies", "gzip", "deflate", "multipart", "trust-dns"] }
quick-xml = { version = "0.26", features = ["serialize"] }
scraper = { version = "0.13" }
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.24", features = ["derive"] }
tokio = { version = "1.21", features = ["rt", "net", "macros"] }
zip = { version = "0.6" }

[dev-dependencies]
indoc = { versoin = "1.0" }
tempdir = { version = "0.3"}