[package]
name = "atpacks-svd-harvester"
description = "Obtains recent SVDs from Microchip ATPACKs repository."
version = "0.9.10"
license = "MIT OR Apache-2.0"
authors = ["Michal Fita <4925040+michalfita@users.noreply.github.com>"]
repository = "https://github.com/atsams-rs/atpacks-svd-harvester"
edition = "2021"

[dependencies]
anyhow = { version = "1.0" }
bytes = { version = "1.2" }
clap = { version = "4.0", features = ["derive"] }
clap-verbosity-flag = { version = "2.0" }
lazy-regex = { version = "3.1.0" }
reqwest = { version = "0.11", default-features = false, features = ["cookies", "gzip", "deflate", "multipart", "trust-dns", "rustls-tls-native-roots"] }
quick-xml = { version = "=0.31.0", features = ["serialize"] } # Bumping up breaks `package.content` deserialization
scraper = { version = "0.18.1" }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
strum = { version = "0.25", features = ["derive"] }
tokio = { version = "1.21", features = ["rt", "net", "macros"] }
zip = { version = "0.6" }

[dev-dependencies]
indoc = { version = "2.0.4" }
tempfile = { version = "3.8.1"}
